# opengl-mischiefs

./: .clang-format  .clang-tidy  .gitattributes  CMakeLists.txt  README.md
compute_shaders/: fog_sphere.cs
include/: basicshader.h  camera.h  computeshader.h  debugshader.h  framebuffermanager.h  framepass.h  fullscreenfogshader.h  geometryshaderprogram.h  gizmospass.h  hdrpass.h  instancedshader.h  instancer.h  lightdefs.h  lightmanager.h  lightvisualizationshader.h  material.h  materialmanager.h  mesh.h  meshmanager.h  model.h  modelloader.h  object.h  objectmanager.h  passthroughshader.h  pbrshader.h  quaternioncamera.h  randomnamer.h  resourcereader.h  shader.h  shaderprogram.h  shadowpass.h  singleton.h  skyboxshader.h  standardpass.h  standardshader.cpp  standardshader.h  texture.h  texture3d.h  texturemanager.h  texturemanager3d.h  (+9 more)
include/glad/: glad.h
models/bill/: bill_cipher.mtl
models/firearm/: license.txt  scene.gltf
models/gameboy/: gameboy.mtl
models/jet_engine/: license.txt  scene.gltf
models/sphere/: sphere.mtl
models/suzuki/: license.txt  scene.gltf
models/tank/: tank_-_ww1.mtl
shaders/: axis_fragment.fs  axis_geometry.gs  axis_vertex.vs  basic_texture.fs  basic_texture.vs  debug_magenta.fs  depth_pass_through.fs  depth_pass_through.vs  depth_pass_through_pbr.vs  fog_renderer.fs  fog_renderer.vs  fragment.fs  fragment_green.fs  fragment_orange.fs  fragment_standard.fs  hdr.fs  hdr.vs  light_fragment.fs  light_source.fs  light_source.vs  light_vertex.vs  pbr_fragment.fs  pbr_vertex.vs  simple_transparent_fragment.fs  simple_transparent_vertex.vs  skybox.fs  skybox.vs  vertex.vs  vertex_standard.vs  voronoi_distances.fs  voronoise.fs  world_plane.fs  world_plane.vs
src/: basicshader.cpp  camera.cpp  computeshader.cpp  framebuffermanager.cpp  fullscreenfogshader.cpp  geometryshaderprogram.cpp  gizmospass.cpp  glad.c  hdrpass.cpp  instancedshader.cpp  lightvisualizationshader.cpp  main.cpp  mesh.cpp  meshmanager.cpp  modelloader.cpp  objectmanager.cpp  passthroughshader.cpp  pbrshader.cpp  quaternioncamera.cpp  randomnamer.cpp  resourcereader.cpp  shadermanager.cpp  shadermanager.h  shaderprogram.cpp  shadowpass.cpp  skyboxshader.cpp  standardpass.cpp  texture.cpp  texture3d.cpp  texturemanager.cpp  texturemanager3d.cpp  timemanager.cpp  transformmanager.cpp  transparentpass.cpp  transparentshader.cpp  volumetricfogcomputepass.cpp  window.cpp  worldplaneshader.cpp
